fix time of day inputs wrapping to new line

--- a/src/apps/callflows/submodules/timeofday/timeofday.css
+++ b/src/apps/callflows/submodules/timeofday/timeofday.css
@@ -71,6 +71,6 @@
 }
 
 .callflows-port #timeofday-form .timepicker {
-	width: 80px;
+	width: 70px;
 	margin: 0 10px;
 }
